# PingPong_Project

./: CMakeLists.txt  DIAGRAMA DE CLASSES.asta  README.md  main.cpp  rpalm.xml
PROJETO LP1/: Ping-Pong - POO_VFINAL.cpp  PingPong - VFINAL.rar
faceDetect/: facedetect_extra.cpp  facedetect_simple.cpp
